# sequences

./: .gitignore  CMakeLists.txt  README.md  sequences-config-version.cmake.in  sequences-config.cmake.in
include/: SequenceExports.h  SequenceReader.h  SequenceWriter.h
python/: CMakeLists.txt  opencv2numpy.cpp  opencv2numpy.h  sequence_reader.pyx  sequence_writer.pyx  setup.py.in  tests.py
src/: CMakeLists.txt  MultiPng.cpp  MultiPng.h  SequenceReader.cpp  SequenceReaderArchive.h  SequenceReaderFfmpeg.h  SequenceReaderMultiFile.h  SequenceReaderMultiPng.h  SequenceReaderOffset.h  SequenceReaderVideoOpenCv.h  SequenceWriter.cpp  SequenceWriterArchive.h  SequenceWriterMultiFile.h  SequenceWriterMultiPng.h  SequencesMain.cpp
tests/: CMakeLists.txt  main.cpp
